Adds mongodb database
